# x-HanJiang

./: .gitignore  Dockerfile  README.en.md  README.md  docker-compose.yml  pyproject.toml
config/: .env.example  config.dev.yaml  config.prod.yaml  config.test.yaml  config.yaml
docs/: architecture.md
examples/: basic_usage.py  custom_api.py  di_usage.py
migrations/: 001_create_user_table.sql
scripts/: init_db.py
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py  health.py  router.py  user.py
src/common/: __init__.py  base_model.py  constants.py  response.py
src/constants/: __init__.py  common.py  user.py
src/core/: __init__.py  config.py  container.py  database.py  exceptions.py  logger.py  middleware.py
src/infra/: __init__.py  cache.py  database.py  http_client.py  mysql.py
src/infras/: cache.py  http_client.py  mysql.py
src/models/: __init__.py  health.py  user.py
src/models/entities/: __init__.py  user_entity.py
src/repositories/: base_repository.py  user_repository.py
src/repository/: __init__.py  user_repository.py
src/schemas/: __init__.py  common.py  health.py  user.py
src/service/: user_service.py
src/services/: __init__.py  base_service.py  user_service.py
src/utils/: __init__.py  helpers.py
tests/: conftest.py
tests/api/: __init__.py  test_health.py
tests/common/: __init__.py  test_response.py
tests/core/: __init__.py  test_config.py  test_container.py  test_exceptions.py  test_logger.py
